fix card spacing on settings page

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -132,6 +132,10 @@
   }
 }
 
+.card ~ .card-stack {
+  margin-top: var(--spacing-l);
+}
+
 .card__list {
   column-count: 2;
   column-gap: var(--spacing-l);
